fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --popup-width: 800px;
+  --popup-width: 700px;
   --popup-height: 400px;
 
   --text: #665d78;
@@ -31,6 +31,43 @@
   @media (max-width: 1024px) {
     font-size: 16px;
   }
+}
+
+/* Keep page from scrolling */
+html,
+body {
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
+  overflow: auto;
+  direction: rtl;
+  scrollbar-width: medium;
+  scrollbar-color: #8b46ff #efe5ff00;
+}
+
+#root>* {
+  direction: ltr;
+}
+
+#root::-webkit-scrollbar {
+  width: 12px;
+}
+
+#root::-webkit-scrollbar-track {
+  background: #efe5ff;
+  border-radius: 10px;
+}
+
+#root::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #a56bff, #7c3aed);
+  border-radius: 10px;
+  border: 2px solid #efe5ff;
+}
+
+#root::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #b57dff, #8b46ff);
 }
 
 html,
